--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		]
 	},
 	"dependencies": {
+		"@alan-ai/alan-sdk-web": "^1.8.34",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
